--- a/css/style.css
+++ b/css/style.css
@@ -240,10 +240,11 @@ p.output.text-left {
 }
 
 .skills {
-    border: 1px solid #555;
-    margin: 35px 25px;
+    box-shadow: 0 2px 5px 0 rgba(0,0,0,.26);
+    margin: 25px;
     text-align: center;
-    height: 400px;
+    height: 40px;
+    background: rgba(0, 0, 0, 0.06);
 }
 
 p.me-bio {
@@ -258,10 +259,10 @@ p.me-bio {
 
 .social {
     float: left;
-    margin:10px 2px;
-    padding: 10px;
+    margin: 0px 1px;
+    padding: 5px;
     border-radius: 3px;
-    background: rgba(0, 0, 0, 0.04);
+    background: rgba(0, 0, 0, 0.06);
 }
 .social a{
     color:rgba(0, 0, 0, 0.5);
@@ -286,4 +287,84 @@ p.me-bio {
     color:#F48024 ;
 }.social.google-plus a:hover {
     color: #dd4b39;
+}
+
+.height{
+    height:100px;
+    width:100%;
+}
+
+.icon {
+    width: 150px;
+    height: 150px;
+    margin: 0px 100px;
+}
+
+#education{
+    background: #f5f5f5;
+}
+
+.edu-block {
+    background: #fff;
+    box-shadow: 0 2px 5px 0 rgba(0,0,0,.26);
+}
+
+
+.tile-progress {
+background-color: #303641;
+color: #fff;
+}
+.tile-progress {
+background: #00a65b;
+color: #fff;
+margin-bottom: 20px;
+-webkit-border-radius: 5px;
+-moz-border-radius: 5px;
+border-radius: 5px;
+-webkit-background-clip: padding-box;
+-moz-background-clip: padding;
+background-clip: padding-box;
+-webkit-border-radius: 3px;
+-moz-border-radius: 3px;
+border-radius: 3px;
+}
+.tile-progress .tile-header {
+padding: 15px 20px;
+padding-bottom: 40px;
+}
+.tile-progress .tile-progressbar {
+height: 2px;
+background: rgba(0,0,0,0.18);
+margin: 0;
+}
+.tile-progress .tile-progressbar span {
+background: #fff;
+}
+.tile-progress .tile-progressbar span {
+display: block;
+background: #fff;
+width: 0;
+height: 100%;
+-webkit-transition: all 1.5s cubic-bezier(0.230,1.000,0.320,1.000);
+-moz-transition: all 1.5s cubic-bezier(0.230,1.000,0.320,1.000);
+-o-transition: all 1.5s cubic-bezier(0.230,1.000,0.320,1.000);
+transition: all 1.5s cubic-bezier(0.230,1.000,0.320,1.000);
+}
+.tile-progress .tile-footer {
+padding: 20px;
+text-align: right;
+background: rgba(0,0,0,0.1);
+-webkit-border-radius: 0 0 3px 3px;
+-webkit-background-clip: padding-box;
+-moz-border-radius: 0 0 3px 3px;
+-moz-background-clip: padding;
+border-radius: 0 0 3px 3px;
+background-clip: padding-box;
+-webkit-border-radius: 0 0 3px 3px;
+-moz-border-radius: 0 0 3px 3px;
+border-radius: 0 0 3px 3px;
+}
+.tile-progress {
+background-color: #303641;
+color: #fff;
 }
