--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ ul.navItem li a{
     font-weight: 700;
     font-size: 16px;
     line-height: 69px;
-    transition:.5s;   
+  
 }
 ul.navItem li a:hover{
 	 background: transparent;
@@ -49,6 +49,7 @@ background:
 background-size: cover;
 background-position: center center;
 height: auto;
+margin-top: 1px;
 }
 .row.land-data{
 	margin: 110px 0;
@@ -213,6 +214,13 @@ padding:100px;
     background: #fafbfb;
 }
 
+.sticky-footer {
+    background: #303641;
+    color: #fff;
+    text-align: center;
+    font-size: 18px;
+    font-family: cursive;
+}
 span.big-130 {
     font-size: 65px;
     color: #000;
@@ -367,4 +375,43 @@ border-radius: 0 0 3px 3px;
 .tile-progress {
 background-color: #303641;
 color: #fff;
+}
+
+
+
+.row.prot {
+    background-color: #fff;
+    background: /* top, transparent red, faked with gradient */ 
+ linear-gradient(
+ rgba(201, 28, 73, 0.71),
+ rgba(181, 7, 44, 0.7)
+ ), url('../images/prot-bg.jpg');
+    background-size: cover;
+    background-position: center center;
+    height: 300px;
+    margin-top: -5px;
+}
+
+h2.myProt {
+    margin-top: -30px;
+    font-family: 'Montserrat', sans-serif;
+    color: #000;
+    text-align: center;
+}
+
+.prot-item {
+    Cursor : crosshair;
+    margin-top: 50px;
+    border: 1px solid #555;
+    padding: 5px;
+    background: #fff;
+    border-radius: 3px;
+}
+
+.protfolio-bg {
+    background: #f5f5f5;
+}   
+
+p.article-head-n.cote {
+    margin-top: 130px;
 }
